Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -12,7 +12,7 @@
       "type": "series",
       "name": "Alya Sometimes Hides Her Feelings in Russian",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162804-TBeptcAfvqTd.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Language Barrier/Primarily Teen Cast/Male Protagonist/Kuudere/Female Harem/Otaku Culture/Female Protagonist/Primarily Female Cast/Feet/Meta/Nudity\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Primarily Teen Cast/Language Barrier/Male Protagonist/Female Harem/Kuudere/Female Protagonist/Primarily Female Cast/Otaku Culture/Feet/Meta/Nudity\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt12057106",
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "My Deer Friend Nokotan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175977-Pgrtv3p3ROe9.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Satire/School Club/School/Female Protagonist/Cute Girls Doing Cute Things/Meta/Primarily Female Cast/Slapstick/Urban Fantasy/Tsundere/Parody/Shounen/Monster Girl/Delinquents/CGI/Chibi/Yandere\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on ABEMA. The original TV broadcast started on July 7th, 2024.</i>"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Satire/School Club/School/Female Protagonist/Cute Girls Doing Cute Things/Meta/Primarily Female Cast/Slapstick/Urban Fantasy/Tsundere/Parody/Shounen/Monster Girl/Delinquents/CGI/Chibi/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on ABEMA. The original TV broadcast started on July 7th, 2024.</i>"
     },
     {
       "id": "tt28279848",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Days with My Stepsister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx152681-xtQiVOYDhr3p.jpg",
-      "description": "Genres: Romance, Slice of Life\nTags:Inseki/Heterosexual/Philosophy/Family Life/Male Protagonist/Female Protagonist/School/Gyaru/Female Harem/Iyashikei\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance, Slice of Life\nTags:Inseki/Heterosexual/Family Life/Philosophy/Male Protagonist/Iyashikei/Female Protagonist/School/Gyaru/Female Harem\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31186547",
@@ -71,13 +71,6 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Magic/Shounen/Dragons/Male Protagonist/Ensemble Cast/Female Protagonist/Primarily Adult Cast/Primarily Teen Cast/Found Family\nNatsu, Lucy, Happy, Erza, and the whole Fairy Tail Guild are back in action! And they’ve decided to tackle the “100 Years Quest”—a job no one’s dared take on since the founding of the guild more than a century ago. A mysterious town, a baffling spirit, a ghastly new enemy … and a brand new continent to explore. When you’re with real friends, the adventures never stop!<br>\n<br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt27187054",
-      "type": "series",
-      "name": "The Elusive Samurai",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
-      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Swordplay/Samurai/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/Trains/CGI/Primarily Male Cast\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32469108",
       "type": "series",
       "name": "Failure Frame: I Became the Strongest and Annihilated Everything with Low-Level Spells",
@@ -85,25 +78,32 @@
       "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Revenge/CGI/Isekai/Survival/Bullying/Male Protagonist/Gore/Elf/Gyaru\nTouka always faded into the background at school. And when he’s summoned to another world with his classmates, that still doesn’t change! They all acquire top-rank skills, except Touka, who’s deemed a failure and cast to ancient ruins by the goddess Vicius. Turns out, his low-rank skills may not be so useless after all. Now, he seeks revenge against the goddess, and his true nature is revealed.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt27187054",
+      "type": "series",
+      "name": "The Elusive Samurai",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
+      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Swordplay/Samurai/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/Trains/CGI/Primarily Male Cast\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt32332831",
       "type": "series",
       "name": "Makeine: Too Many Losing Heroines!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171457-Z8tZRk7LhcZk.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/Heterosexual/School Club/Satire/Love Triangle/Primarily Teen Cast/Female Harem/School/Tomboy/Tanned Skin/Nudity/Meta\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
-    },
-    {
-      "id": "tt30844357",
-      "type": "series",
-      "name": "SHOSHIMIN: How to Become Ordinary",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173295-5DIOnrTYiF0a.jpg",
-      "description": "Genres: Mystery\nTags:Male Protagonist/Detective/School/Female Protagonist/Food/School Club\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/School Club/Love Triangle/Heterosexual/Satire/School/Female Harem/Primarily Teen Cast/Tomboy/Tanned Skin/Meta/Nudity\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
     },
     {
       "id": "tt32395862",
       "type": "series",
       "name": "I Parry Everything",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170695-Nb1DIg7gIHCF.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Swordplay/Male Protagonist/Magic/Coming of Age/Surreal Comedy/Goblin\nThe Kingdom of Clays faces a dire crisis: an assassination attempt has just been made on its own Princess Lynneburg, and its neighboring countries eye the aftermath like starving vultures, plotting the Kingdom’s downfall. The ensuing conflict will shape the face of the continent for centuries to come...but Noor doesn’t have a clue about any of that! Having freshly arrived at the royal capital after over a decade of rigorous, isolated training at his mountain home, he’s dead set on achieving his childhood dream of becoming an adventurer, even if the only skills he possesses are useless ones. Sure, he can [Parry] thousands of swords in the span of a single breath, but everybody knows you need more than that if you want to be an adventurer! Our hero’s road to making his dream come true will be long(?) and arduous(?)—but if there’s one thing Noor’s not afraid of, it’s some good ol’ fashioned hard work!<br>\n<br>\n(Source: J-Novel Club)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Swordplay/Male Protagonist/Magic/Surreal Comedy/Coming of Age/Goblin\nThe Kingdom of Clays faces a dire crisis: an assassination attempt has just been made on its own Princess Lynneburg, and its neighboring countries eye the aftermath like starving vultures, plotting the Kingdom’s downfall. The ensuing conflict will shape the face of the continent for centuries to come...but Noor doesn’t have a clue about any of that! Having freshly arrived at the royal capital after over a decade of rigorous, isolated training at his mountain home, he’s dead set on achieving his childhood dream of becoming an adventurer, even if the only skills he possesses are useless ones. Sure, he can [Parry] thousands of swords in the span of a single breath, but everybody knows you need more than that if you want to be an adventurer! Our hero’s road to making his dream come true will be long(?) and arduous(?)—but if there’s one thing Noor’s not afraid of, it’s some good ol’ fashioned hard work!<br>\n<br>\n(Source: J-Novel Club)"
+    },
+    {
+      "id": "tt30844357",
+      "type": "series",
+      "name": "SHOSHIMIN: How to Become Ordinary",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173295-5DIOnrTYiF0a.jpg",
+      "description": "Genres: Mystery\nTags:Male Protagonist/Detective/Female Protagonist/School/Food/School Club/Crime\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31141567",
@@ -166,14 +166,14 @@
       "type": "series",
       "name": "Senpai is an Otokonoko",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163133-bdr9S2bdLoyj.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/LGBTQ+ Themes/Coming of Age/School/Primarily Teen Cast/Femboy/Bisexual/Josei/Male Protagonist/Female Protagonist\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/LGBTQ+ Themes/Coming of Age/Primarily Teen Cast/School/Femboy/Bisexual/Josei/Male Protagonist/Female Protagonist\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt18311412",
       "type": "series",
       "name": "NieR:Automata Ver1.1a Cour 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167420-PBxeW0tmbEDQ.jpg",
-      "description": "Genres: Action, Drama, Fantasy, Psychological, Sci-Fi\nTags:Post-Apocalyptic/Robots/Lost Civilization/Artificial Intelligence/Female Protagonist/War/Revenge/Proxy Battle/Philosophy/Swordplay/Dystopian/Real Robot/Male Protagonist/CGI/Puppetry/Space/Guns/Desert\nThe second season of <i>NieR:Automata Ver1.1a</i>.<br><br>\n\nThe year 11954. YoRHa Soldiers 2B and 9S are newly dispatched to Earth to carry out and support the 243rd Descent Operation. There, they succeed in destroying the machine lifeform core units, Adam and Eve. With the annihilation of these enemies, the Army of Humanity takes this chance to end this long-lasting war and decides on an all-out attack against the machine lifeforms. This is a record of the battles and hopes of Androids and the fate which dictates them all…<br><br>\n\nAs war rages on, Unit 2B and others like her question their role. Reclaiming the planet will take sacrifice, but how much more can they give and is humanity worth the cost? <br><br>\n\n(Source: Crunchyroll, Crunchyroll Twitter)"
+      "description": "Genres: Action, Drama, Fantasy, Psychological, Sci-Fi\nTags:Post-Apocalyptic/Lost Civilization/Robots/Artificial Intelligence/Female Protagonist/War/Revenge/Proxy Battle/Philosophy/Swordplay/Dystopian/Real Robot/Male Protagonist/CGI/Puppetry/Space/Guns/Desert\nThe second season of <i>NieR:Automata Ver1.1a</i>.<br><br>\n\nThe year 11954. YoRHa Soldiers 2B and 9S are newly dispatched to Earth to carry out and support the 243rd Descent Operation. There, they succeed in destroying the machine lifeform core units, Adam and Eve. With the annihilation of these enemies, the Army of Humanity takes this chance to end this long-lasting war and decides on an all-out attack against the machine lifeforms. This is a record of the battles and hopes of Androids and the fate which dictates them all…<br><br>\n\nAs war rages on, Unit 2B and others like her question their role. Reclaiming the planet will take sacrifice, but how much more can they give and is humanity worth the cost? <br><br>\n\n(Source: Crunchyroll, Crunchyroll Twitter)"
     },
     {
       "id": "tt30326044",
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "The Café Terrace and Its Goddesses Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166477-Q5jKn2WpDQ6z.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance\nTags:Female Harem/Heterosexual/Primarily Female Cast/Male Protagonist/Work/Nudity/Family Life/Primarily Adult Cast/Shounen/Food/Tsundere/Restaurant \nThe second season of <i>Megami no Café Terrace</i>. <br><br>\n\nThe Familia Café Terrace opens once again, with rival restaurants opening right next door!<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Comedy, Ecchi, Romance\nTags:Female Harem/Heterosexual/Primarily Female Cast/Male Protagonist/Work/Nudity/Family Life/Primarily Adult Cast/Shounen/Food/Tsundere/Restaurant\nThe second season of <i>Megami no Café Terrace</i>. <br><br>\n\nThe Familia Café Terrace opens once again, with rival restaurants opening right next door!<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt32832439",
