--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "My Deer Friend Nokotan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175977-Pgrtv3p3ROe9.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Satire/School Club/School/Female Protagonist/Cute Girls Doing Cute Things/Meta/Primarily Female Cast/Slapstick/Urban Fantasy/Tsundere/Parody/Shounen/Monster Girl/Delinquents/CGI/Chibi/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on ABEMA. The original TV broadcast started on July 7th, 2024.</i>"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Satire/School Club/School/Female Protagonist/Cute Girls Doing Cute Things/Meta/Primarily Female Cast/Slapstick/Urban Fantasy/Tsundere/Parody/Shounen/Delinquents/Monster Girl/CGI/Chibi/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on ABEMA. The original TV broadcast started on July 7th, 2024.</i>"
     },
     {
       "id": "tt28279848",
@@ -75,7 +75,7 @@
       "type": "series",
       "name": "The Elusive Samurai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
-      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Samurai/Swordplay/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/CGI/Trains/Primarily Male Cast/Fugitive/Religion\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Samurai/Swordplay/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/CGI/Trains/Primarily Male Cast/Fugitive/Religion/Archery\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32469108",
@@ -103,7 +103,7 @@
       "type": "series",
       "name": "SHOSHIMIN: How to Become Ordinary",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173295-5DIOnrTYiF0a.jpg",
-      "description": "Genres: Mystery, Slice of Life\nTags:Male Protagonist/Detective/Female Protagonist/School/Food/School Club/Crime\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Mystery, Slice of Life\nTags:Detective/School/Male Protagonist/Food/Female Protagonist/Crime/School Club\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31141567",
@@ -138,7 +138,7 @@
       "type": "series",
       "name": "The Ossan Newbie Adventurer, Trained to Death by the Most Powerful Party, Became Invincible",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163292-1DkPP4r5UI9Y.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Primarily Adult Cast/Slapstick/Magic/Swordplay/Elf/Ojou-sama/Parody/Guns/Achronological Order/Work/Maids/Vampire\n<i>\"Why should it matter how old you are if you want to start something new?\"</i><br><br>\n\nThe strongest guy around, who also happens to be middle-aged, strives to be an adventurer! Everyone seems to think you should pursue your dreams while you're still young, but there's one man who just can't give up. In a world where most people who become adventurers do so in their teens, a guild employee in his thirties, Rick Gladiator, seeks to become an adventurer instead. After receiving unimaginably brutal training from the legendary party renowned as the strongest on the continent, Orichalcum Fist, he ends up with combat abilities worthy of S-rank status despite starting out as an F-rank rookie! <br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Primarily Adult Cast/Magic/Slapstick/Swordplay/Elf/Ojou-sama/Parody/Guns/Achronological Order/Work/Maids/Vampire\n<i>\"Why should it matter how old you are if you want to start something new?\"</i><br><br>\n\nThe strongest guy around, who also happens to be middle-aged, strives to be an adventurer! Everyone seems to think you should pursue your dreams while you're still young, but there's one man who just can't give up. In a world where most people who become adventurers do so in their teens, a guild employee in his thirties, Rick Gladiator, seeks to become an adventurer instead. After receiving unimaginably brutal training from the legendary party renowned as the strongest on the continent, Orichalcum Fist, he ends up with combat abilities worthy of S-rank status despite starting out as an F-rank rookie! <br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt30971467",
@@ -285,7 +285,7 @@
       "type": "series",
       "name": "Twilight Out of Focus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166700-qsl4dBd4pPSQ.jpg",
-      "description": "Genres: Drama, Romance\nTags:Boys' Love/LGBTQ+ Themes/Filmmaking/School/School Club/Acting/Male Protagonist/Primarily Male Cast/Ensemble Cast/Twins\nA boys’ school film club is the backdrop for three tales of new romance. Mao and Hisashi pair up for a project, make three promises, and draw closer together in the process. The club president, Jin, and a jealous junior named Giichi clash before finding common ground. Shion, a first-year student, joins the film club in search of a boyfriend and butts heads with Rei—until Rei asks him on a date.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Romance\nTags:Boys' Love/LGBTQ+ Themes/Filmmaking/School/School Club/Acting/Male Protagonist/Primarily Male Cast/Ensemble Cast/Twins/Nudity\nA boys’ school film club is the backdrop for three tales of new romance. Mao and Hisashi pair up for a project, make three promises, and draw closer together in the process. The club president, Jin, and a jealous junior named Giichi clash before finding common ground. Shion, a first-year student, joins the film club in search of a boyfriend and butts heads with Rei—until Rei asks him on a date.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32832441",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "Go-toubun no Hanayome *",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177191-m98G4nvARiHy.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Twins/Female Harem/Marriage/Primarily Female Cast/Heterosexual/Male Protagonist/Ensemble Cast/Shounen\nThe honeymoon of Futaro and the five sisters has been adapted to film under the original idea and complete supervision of Negi Haruba.<br><br>\nOnce again, we present a romantic comedy with 500% cuteness!<br><br>\n(Source: Official 5th Anniversary Project Website, Translated)<br><br>\n<i>Note: Relations are provisional and subject to change.<br>The anime was pre-screened in Japan theatrically for 3 weeks starting on September 20, 2024 before being aired as a TV special.</i>"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Twins/Marriage/Female Harem/Primarily Female Cast/Heterosexual/Male Protagonist/Ensemble Cast/Shounen\nThe honeymoon of Futaro and the five sisters has been adapted to film under the original idea and complete supervision of Negi Haruba.<br><br>\nOnce again, we present a romantic comedy with 500% cuteness!<br><br>\n(Source: Official 5th Anniversary Project Website, Translated)<br><br>\n<i>Note: Relations are provisional and subject to change.<br>The anime was pre-screened in Japan theatrically for 3 weeks starting on September 20, 2024 before being aired as a TV special.</i>"
     },
     {
       "id": "tt32645928",
