--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -71,6 +71,16 @@
       "description": "Genres: Fantasy, Slice of Life, Supernatural\nTags:Fairy Tale/Rotoscoping/Female Protagonist/Animals/Ghost/Youkai/Mopeds/Urban Fantasy/Urban/Rural/Gods\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
     },
     {
+      "id": "tt32550189",
+      "type": "movie",
+      "name": "Touken Ranbu Kai: Douden Chikashi Haberau Monora",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177680-1aMyyhEanFYJ.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt32550189"
+      },
+      "description": "Genres: Action, Fantasy\nTags:\nPrequel anime to <i>Touken Ranbu Kai: Kyoden Moyuru Honnouji</i>."
+    },
+    {
       "id": "tt32477753",
       "type": "movie",
       "name": "Zegapain STA",
