--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
-      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Musical Theater/Acting/Revenge/Idol/Twins/Seinen/Drawing/Male Protagonist/Tsundere/Urban/Achronological Order/Female Protagonist\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Musical Theater/Revenge/Idol/Twins/Seinen/Male Protagonist/Urban/Achronological Order/Female Protagonist/Drawing/Tsundere\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt31131295",
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "My Deer Friend Nokotan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175977-Pgrtv3p3ROe9.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/School/Female Protagonist/School Club/Satire/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Slapstick/Urban Fantasy/Tsundere/Parody/Delinquents/CGI/Monster Girl/Shounen/Chibi/Cosmic Horror/Yandere/Yuri\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/School Club/School/Female Protagonist/Satire/Slapstick/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Urban Fantasy/Tsundere/Parody/Delinquents/CGI/Monster Girl/Shounen/Chibi/Yuri/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
     },
     {
       "id": "tt28279848",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Days with My Stepsister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx152681-xtQiVOYDhr3p.jpg",
-      "description": "Genres: Romance, Slice of Life\nTags:Inseki/Heterosexual/Family Life/Philosophy/Male Protagonist/Iyashikei/Female Protagonist/School/Gyaru/Female Harem\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance, Slice of Life\nTags:Family Life/Inseki/Philosophy/Heterosexual/Male Protagonist/Iyashikei/Female Protagonist/School/Gyaru/Female Harem\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31186547",
@@ -68,7 +68,7 @@
       "type": "series",
       "name": "The Elusive Samurai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
-      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Samurai/Swordplay/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/CGI/Trains/Primarily Male Cast/Fugitive/Religion/Archery\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Samurai/Swordplay/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/Fugitive/Archery/CGI/Trains/Primarily Male Cast/Religion\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt15414478",
@@ -141,18 +141,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Primarily Adult Cast/Magic/Slapstick/Swordplay/Elf/Ojou-sama/Parody/Guns/Achronological Order/Work/Maids/Vampire\n<i>\"Why should it matter how old you are if you want to start something new?\"</i><br><br>\n\nThe strongest guy around, who also happens to be middle-aged, strives to be an adventurer! Everyone seems to think you should pursue your dreams while you're still young, but there's one man who just can't give up. In a world where most people who become adventurers do so in their teens, a guild employee in his thirties, Rick Gladiator, seeks to become an adventurer instead. After receiving unimaginably brutal training from the legendary party renowned as the strongest on the continent, Orichalcum Fist, he ends up with combat abilities worthy of S-rank status despite starting out as an F-rank rookie! <br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt1745240",
+      "type": "series",
+      "name": "Kimi ni Todoke: From Me to You Season 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-vcpdhVFfPpOn.jpg",
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Snowscape/School/Heterosexual/Primarily Teen Cast/Female Protagonist/Male Protagonist/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
+    },
+    {
       "id": "tt30971467",
       "type": "series",
       "name": "MONOGATARI Series: OFF & MONSTER Season",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173533-0dZ2eV1Y0wQI.jpg",
       "description": "Genres: Drama, Mystery, Supernatural\nTags:Philosophy/Urban Fantasy/Female Protagonist/Youkai/Primarily Female Cast/Vampire/Drawing/Gods/Hikikomori/Coming of Age/Zombie/Fishing\nThe sequel to the 'Final Season' story arc of the <i>Monogatari</i> series.<br><br>\n\n<i>From the past to the future, their story continues. </i><br><br>\n\nNow that he has graduated from high school, Koyomi Araragi’s story ends here. His story is truly over now, but the stories of the girls Koyomi saved - their stories - are not over yet.<br><br>\n\nThis is the prequel or sequel to their stories and their struggles.<br><br>\n\n(Source: Monogatari Series USA Official Website)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
-    },
-    {
-      "id": "tt1745240",
-      "type": "series",
-      "name": "Kimi ni Todoke: From Me to You Season 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-vcpdhVFfPpOn.jpg",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Heterosexual/School/Primarily Teen Cast/Female Protagonist/Male Protagonist/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
     },
     {
       "id": "tt31844529",
@@ -243,7 +243,7 @@
       "type": "series",
       "name": "MAYONAKA PUNCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174044-HBvsyKjDVPyO.jpg",
-      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Female Protagonist/Yuri/Primarily Female Cast/Urban Fantasy/Primarily Adult Cast/Vampire/Super Power/Cute Girls Doing Cute Things/VTuber\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Yuri/Female Protagonist/Primarily Female Cast/Primarily Adult Cast/Urban Fantasy/Vampire/Super Power/Cute Girls Doing Cute Things/VTuber\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt23844810",
@@ -295,18 +295,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy\nTags:Dungeon/Cute Girls Doing Cute Things/Swordplay/Iyashikei/Female Protagonist/Kingdom Management\nOn the hunt for her missing father, master thief Clay heads off into an unexplored dungeon—but much to her surprise, the dungeon’s caretaker offers her a job! Thievery hasn’t worked for her thus far, so perhaps this new career path will take her closer to finding her dad. But change is never easy. From interviewing monster guardians to positioning traps to confound would-be explorers, Clay has a lot to learn about what it means to be one of the dungeon people.\n<br><br>\n(Source: HIDIVE)"
     },
     {
+      "id": "tt32645928",
+      "type": "series",
+      "name": "Delico's Nursery",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167991-uOu8ggPXzVUQ.jpg",
+      "description": "Genres: Fantasy, Mystery, Supernatural\nTags:Vampire/Male Protagonist/Primarily Male Cast/Parenthood/Twins\nHailing from the prestigious noble house of Delico, Dali Delico is an elite member of the Blood Pact Council with a promising future. When the Blood Pact Council, the highest governing body for the Vamps, assigns a special mission to Dali, he flatly refuses it. Having lost patience, Gerhard, Dino, and Henrique, who are also Council members serving the same term as Dali, rush to the house of Delico to persuade him. What they witness there is Dali, taking care of an infant himself… Meanwhile, there has been a series of mysterious murders targeting Vamps. And Dali seems to have a history with Pendulum, an antisocial organization that's thought to be the mastermind behind these murders… This is the record of the nobless oblige scramble of child-rearing by the noble Vamps. Can they find the right balance of their absolute mission and childcare in this magnificent gothic world?!<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: 'Delico's Nursery' is a completely new work based on Kenichi Suemitsu's 'TRUMP' stage play and serves as a sequel to the 'Grand Guignol' 2017 stage play in the series.</i>"
+    },
+    {
       "id": "kitsu:48807",
       "type": "series",
       "name": "Go-toubun no Hanayome *",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177191-m98G4nvARiHy.jpg",
       "description": "Genres: Comedy, Drama, Romance\nTags:Twins/Marriage/Female Harem/Primarily Female Cast/Heterosexual/Male Protagonist/Ensemble Cast/Shounen\nThe honeymoon of Futaro and the five sisters has been adapted to film under the original idea and complete supervision of Negi Haruba.<br><br>\nOnce again, we present a romantic comedy with 500% cuteness!<br><br>\n(Source: Official 5th Anniversary Project Website, Translated)<br><br>\n<i>Note: Relations are provisional and subject to change.<br>The anime was pre-screened in Japan theatrically for 3 weeks starting on September 20, 2024 before being aired as a TV special.</i>"
-    },
-    {
-      "id": "tt32645928",
-      "type": "series",
-      "name": "Delico's Nursery",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167991-uOu8ggPXzVUQ.jpg",
-      "description": "Genres: Fantasy, Mystery, Supernatural\nTags:Vampire/Male Protagonist/Parenthood/Twins\nHailing from the prestigious noble house of Delico, Dali Delico is an elite member of the Blood Pact Council with a promising future. When the Blood Pact Council, the highest governing body for the Vamps, assigns a special mission to Dali, he flatly refuses it. Having lost patience, Gerhard, Dino, and Henrique, who are also Council members serving the same term as Dali, rush to the house of Delico to persuade him. What they witness there is Dali, taking care of an infant himself… Meanwhile, there has been a series of mysterious murders targeting Vamps. And Dali seems to have a history with Pendulum, an antisocial organization that's thought to be the mastermind behind these murders… This is the record of the nobless oblige scramble of child-rearing by the noble Vamps. Can they find the right balance of their absolute mission and childcare in this magnificent gothic world?!<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: 'Delico's Nursery' is a completely new work based on Kenichi Suemitsu's 'TRUMP' stage play and serves as a sequel to the 'Grand Guignol' 2017 stage play in the series.</i>"
     },
     {
       "id": "tt22524872",
