Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "My Deer Friend Nokotan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175977-Pgrtv3p3ROe9.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/School Club/School/Female Protagonist/Satire/Slapstick/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Urban Fantasy/Tsundere/Parody/Delinquents/CGI/Monster Girl/Shounen/Chibi/Yuri/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/School Club/School/Female Protagonist/Satire/Slapstick/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Urban Fantasy/Tsundere/Parody/Delinquents/CGI/Monster Girl/Shounen/Yuri/Chibi/Yandere/Cosmic Horror\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
     },
     {
       "id": "tt28279848",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Days with My Stepsister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx152681-xtQiVOYDhr3p.jpg",
-      "description": "Genres: Romance, Slice of Life\nTags:Family Life/Inseki/Philosophy/Heterosexual/Male Protagonist/Iyashikei/Female Protagonist/School/Gyaru/Female Harem\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance, Slice of Life\nTags:Inseki/Family Life/Philosophy/Heterosexual/Male Protagonist/Iyashikei/Female Protagonist/School/Gyaru/Female Harem\nWhen his father remarries, Yuta Asamura winds up sharing a roof with his new stepsister, Saki Ayase, the hottest girl in his grade. Carrying the scars of their parents’ troubled divorces, they vow to maintain a respectful distance. But what starts as cautious camaraderie blossoms into something deeper from shared experiences. Is it admiration, familial love, or something more?<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31186547",
@@ -71,6 +71,13 @@
       "description": "Genres: Action, Adventure\nTags:Male Protagonist/Historical/Samurai/Swordplay/Primarily Child Cast/War/Surreal Comedy/Shounen/Gore/Fugitive/Archery/CGI/Trains/Primarily Male Cast/Religion\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt32469108",
+      "type": "series",
+      "name": "Failure Frame: I Became the Strongest and Annihilated Everything with Low-Level Spells",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173694-XcwGOMBxboOO.png",
+      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Revenge/CGI/Isekai/Survival/Bullying/Male Protagonist/Elf/Gore/Gyaru\nTouka always faded into the background at school. And when he’s summoned to another world with his classmates, that still doesn’t change! They all acquire top-rank skills, except Touka, who’s deemed a failure and cast to ancient ruins by the goddess Vicius. Turns out, his low-rank skills may not be so useless after all. Now, he seeks revenge against the goddess, and his true nature is revealed.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt15414478",
       "type": "series",
       "name": "FAIRY TAIL 100 YEARS QUEST",
@@ -78,18 +85,11 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Magic/Shounen/Dragons/Male Protagonist/Ensemble Cast/Female Protagonist/Primarily Adult Cast/Primarily Teen Cast/Found Family\nNatsu, Lucy, Happy, Erza, and the whole Fairy Tail Guild are back in action! And they’ve decided to tackle the “100 Years Quest”—a job no one’s dared take on since the founding of the guild more than a century ago. A mysterious town, a baffling spirit, a ghastly new enemy … and a brand new continent to explore. When you’re with real friends, the adventures never stop!<br>\n<br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt32469108",
-      "type": "series",
-      "name": "Failure Frame: I Became the Strongest and Annihilated Everything with Low-Level Spells",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173694-XcwGOMBxboOO.png",
-      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Revenge/CGI/Isekai/Survival/Bullying/Male Protagonist/Gore/Elf/Gyaru\nTouka always faded into the background at school. And when he’s summoned to another world with his classmates, that still doesn’t change! They all acquire top-rank skills, except Touka, who’s deemed a failure and cast to ancient ruins by the goddess Vicius. Turns out, his low-rank skills may not be so useless after all. Now, he seeks revenge against the goddess, and his true nature is revealed.<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32332831",
       "type": "series",
       "name": "Makeine: Too Many Losing Heroines!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171457-Z8tZRk7LhcZk.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/School Club/Love Triangle/Heterosexual/Satire/School/Female Harem/Primarily Teen Cast/Tomboy/Tanned Skin/Meta/Nudity\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
+      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/Heterosexual/Love Triangle/School Club/Satire/School/Female Harem/Primarily Teen Cast/Tomboy/Tanned Skin/Meta/Nudity\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
     },
     {
       "id": "tt32395862",
@@ -145,7 +145,7 @@
       "type": "series",
       "name": "Kimi ni Todoke: From Me to You Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-vcpdhVFfPpOn.jpg",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Snowscape/School/Heterosexual/Primarily Teen Cast/Female Protagonist/Male Protagonist/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Snowscape/Primarily Teen Cast/School/Heterosexual/Female Protagonist/Male Protagonist/Gyaru/Tomboy/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
     },
     {
       "id": "tt30971467",
@@ -243,7 +243,7 @@
       "type": "series",
       "name": "MAYONAKA PUNCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174044-HBvsyKjDVPyO.jpg",
-      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Yuri/Female Protagonist/Primarily Female Cast/Primarily Adult Cast/Urban Fantasy/Vampire/Super Power/Cute Girls Doing Cute Things/VTuber\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Female Protagonist/Yuri/Primarily Female Cast/Cute Girls Doing Cute Things/Vampire/Primarily Adult Cast/Urban Fantasy/Super Power/VTuber\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt23844810",
